# namada-sdk-starter

./: .gitignore  Cargo.toml  README.md  wallet.toml
docker/namada/: Dockerfile  e2e-tests-single-node.toml  run-namada.sh  setup-namada.sh
docker/namada-v0.15.4/: Dockerfile
docker/namada-with-chain/: Dockerfile
src/: main.rs
wasm/: tx_init_account.c867276c833b39cbe0da42ef09e84c4288c4a9e42f52446eaaa0cca5d3f16f89.wasm  tx_init_validator.7f43e5028592fbc607bf579d8474e883379264d4d137d80529550b44dbf93588.wasm  vp_user.bf4688574c26db2e2d55fa033a2d6a98f8c13c03dcaeaefbbb9bd59589187881.wasm
